@@ -63,6 +63,17 @@ in
 for details.
 .RE
 .TP
+.B Play mode
+A string to select the play mode:
+.RS
+.IP \fBlinear\fP
+play subsongs in linear order
+.IP \fBrandom\fP
+play subsongs in random order where every subsong can be played multiple times
+.IP \fBshuffle\fP
+play subsongs in random order where every subsong is played only once
+.RE
+.TP
 .B Plugin
 The name of an output plugin.
 Run `\fIgbsplay\ \-o\ list\fP' to get a list of all available output plugins.
@@ -85,6 +96,9 @@ Set the desired loop mode.
 .TP
 .BR output_plugin " = " \fIPlugin\fP
 Set the sound output plugin.
+.TP
+.BR play_mode " = " \fIPlay\ mode\fP
+Set the desired play mode.
 .TP
 .BR rate " = " \fIInteger\fP
 Set the samplerate in Hz.
